added a lot of material ui and custom pizza images

--- a/src/components/CustomerForm/CustomerForm.css
+++ b/src/components/CustomerForm/CustomerForm.css
@@ -1,19 +1,10 @@
 /* .customerForm {
-    align-items: center;
-    max-width: fit-content;
-}
-
-.infoForm {
-    padding-left: 100px;
-    float: left
-}
-
-.radioButtons {
-    padding-top: 90px;
-    padding-left: 200px;
-    padding-right: 50px;
-    float: right;
+    text-align: center;
+    align-content: center;
+    display: block;
+    margin: 0 auto;
 } */
+
 
 
 
