--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,14 +4,19 @@
     padding: 20px;
     color: white;
     margin-bottom: 20px;
+    position: sticky;
+    z-index: 1;
+    top: 0;
 }
 
 .App-title {
     float: left;
     font-size: 2em;
+    font-family: 'Roboto';
 }
 
 .cart-total {
     padding-top: 70px;
     float: right;
+    font-family: 'Roboto';
 }
